fixed BUG - rows in contact suggestion list are truncated incorrectly

--- a/styles/common/jquery-ui-overrides.less
+++ b/styles/common/jquery-ui-overrides.less
@@ -13,10 +13,18 @@
 
 	&.ui-menu .ui-menu-item {
 		display: block;
-		
+
 		a {
 			overflow: hidden;
 			white-space: nowrap;
+			padding: 3px 0.4em;
+			line-height: inherit;
+
+			.menu-item-label {
+				display: inline-block;
+				max-width: 100%;
+				overflow: hidden;
+			}
 
 			span.del {
 				color: rgb(216, 216, 216);
@@ -34,19 +42,21 @@
 			}
 
 			span.key {
-				position: absolute;
-				// right: 3px;
 				text-shadow: 0 1px 0 #ffffff, 0 0 0 #c8c8c8;
-				top: 6px;
 				height: 16px;
 				font-size: 16px;
-				line-height: 1;
+				vertical-align: text-bottom;
+
 				.init-icon-font();
 				
 				&:before {
 					content: "\e658";
 				}
 			}
+		}
+
+		&.menu-item-has-key a .menu-item-label {
+			max-width: calc(100% - 12px);
 		}
 
 		a.ui-state-active {
@@ -57,10 +67,6 @@
 			span.del:hover {
 				box-shadow: none;
 				color: #676767;
-			}
-
-			span.key {
-				top: 7px;
 			}
 		}
 
